fix the tooltip not showing the second line

--- a/Bootstrap/Assignment_2/css/style.css
+++ b/Bootstrap/Assignment_2/css/style.css
@@ -35,10 +35,8 @@ body{
 .navbar-dark {
      background-color: #512DA8;
 }
-.card {
-    margin: 0 auto; /* Added */
-    float: none; /* Added */
-    margin-bottom: 10px; /* Added */
+.tooltip-inner {
+    white-space:pre-wrap;
 }
 #getExciting{
     display: none;
